Database/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db-be
  name: db-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-be
  template:
    metadata:
      labels:
        app: db-be
    spec:
      containers:
      - image: mysql/mysql-server:5.7
        name: mysql
        ports:
        - containerPort: 3306
        resources: 
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
