Database/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    app: db-be    
  ports:
  - port: 3306
    targetPort: 3306
